[package]
name = "ddoc"
version = "0.8.0"
edition = "2024"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/ddoc"
description = "doc site generator"
keywords = ["markdown", "doc", "html"]
license = "AGPL-3.0"
categories = ["command-line-utilities"]
readme = "README.md"
rust-version = "1.86"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
clap-help = "1.5"
cli-log = "2.1"
deser-hjson = "2.2.5"
indexmap = {version = "2.7", features = ["serde"]}
lazy-regex = "3.4"
notify = "8.2.0"
pulldown-cmark = "0.13.0"
pulldown-cmark-toc = "0.7.0"
rouille = "3.6"
rustc-hash = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termimad = "0.34"
thiserror = "2"
toml = "0.9"

